add gettask endpoint, adjust seed data
